apps/helios-ipmi/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: helios-ipmi
  labels:
    app: helios-ipmi
subsets:
  - addresses:
      - ip: 10.1.255.248
    ports:
      - port: 80
