apps/helios-ipmi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helios-ipmi
  labels:
    app: helios-ipmi
spec:
  ports:
    - port: 80
      targetPort: 80
